--- a/ND1/index.html
+++ b/ND1/index.html
@@ -6,9 +6,8 @@
     <link href="style.css" rel="stylesheet" type="text/css"/>
 
 <body>
-        <div class="hello" style="">
-            <h2><p class="one" >Hello world!</p></h2>
-            <h2><p class="two" >Hello world!</p></h2>
+        <div class="one">
+            <div class="two"><h2>Hello world!</h2></div>
         </div>
 </body>
 </html>
