--- a/ND4/index.html
+++ b/ND4/index.html
@@ -4,37 +4,40 @@
     <meta charset="UTF-8">
     <title>ND4</title>
     <link href="style.css" rel="stylesheet" type="text/css"/>
+    <link href="https://fonts.googleapis.com/css?family=Krub" rel="stylesheet">
 </head>
 <body>
 
-  <header class="block1" id="fon">
+<header class="block1" id="fon">
     <div class="block2">
-      <div><h1>Jane & John</h1></div>
-        <div><h2>Are getting married</h2></div>
-        <div><h2>17.07.2017</h2></div>
+        <div>
+            <h1 class="h1-font">Jane & John</h1>
+            <h2 class="h2-font">Are getting married</h2>
+            <b>
+                <h2>17.07.2017</h2>
+            </b>
+        </div>
     </div>
-  </header>
-  <div class="block1" id="fon2">
-      <div class="block2">
-          <div><h1>Jane & John</h1></div>
-          <div></div>
-      </div>
-  </div>
-
-
-
-  <div class="m1-bar m1-right" style="">
-          <div class="">
-              <div class="bar1">
-                  <a href="#home" class="m1-botton" title="Home"><h3>Home</h3></a>
-              </div>
-          </div>
-          <div class="bar1">
-              <a title="Jane & John">Jane & John</a>
-          </div>
-          <div class="bar1"><a title="Wedding">Wedding<Wedding/a></div>
-          <div class="bar1"><a title="RSVP">RSVP</a></div>
-
-  </div>
+</header>
+<content>
+    <div class="block1" id="fon2">
+        <div class="block2">
+            <div><h1>Jane & John</h1></div>
+            <div></div>
+        </div>
+    </div>
+    <div class="m1-bar m1-right">
+        <div class="bar1">
+            <div class="bar1">
+                <a href="#home" class="botton" title="Home"><h3>Home</h3></a>
+            </div>
+        </div>
+        <div class="bar1">
+            <a title="Jane & John">Jane & John</a>
+        </div>
+        <div class="bar1"><a title="Wedding">Wedding</a></div>
+        <div class="bar1"><a title="RSVP">RSVP</a></div>
+    </div>
+</content>
 </body>
 </html>
